Deleted unneeded CSS

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Willand Village Hall</title>
-    <meta name="description" content="Willand Village Hall's Homepage. Find out about us, our events and other organisations that prove Willand Matters"
+    <meta name="description" content="Willand Village Hall's Minisite. Find out about us, our events and other organisations around Willand"
     />
     <meta name="keywords" content="Willand, willand, village hall, events, calendar, WVH, contact details">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
