--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/appicon.png">
+    <meta name="theme-color" content="#2e672d">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,7 +28,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this app. Sorry.
     </noscript>
     <div id="root"></div>
     <!--
