--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/appicon.png">
     <meta name="theme-color" content="#2e672d">
+
+    <script href="https://ajax.googleapis.com/ajax/libs/threejs/r70/three.min.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
