Enhanced gallery functionality

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Willand Village Hall</title>
-    <meta name="description" content="Willand Village Hall's Minisite. Find out about us, our events and other organisations around Willand"
+    <meta name="description" content="Wiland Village Hall - Find out about booking events and organisations using the hall. You can also check out availability for your event."
     />
     <meta name="keywords" content="Willand, willand, village hall, events, calendar, WVH, contact details">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,6 +13,15 @@
     <meta name="theme-color" content="#2e672d">
 
     <script href="https://ajax.googleapis.com/ajax/libs/threejs/r70/three.min.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117907112-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117907112-1');
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
